--- a/front/.gitignore
+++ b/front/.gitignore
@@ -2,24 +2,10 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+/public
+/src
 
-# testing
-/coverage
 
-# production
-/build
-
-# misc
-.DS_Store
-
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+package-lock.json
+package.json
+README.md
